--- a/app/assets/stylesheets/utilities/_mixins.sass
+++ b/app/assets/stylesheets/utilities/_mixins.sass
@@ -99,8 +99,9 @@
     cursor: pointer
 
 @mixin mobile-graph-mixin
-  #predictor-graph-svg
+  .staff #predictor-graph-svg
     height: 175px
+  #predictor-graph-svg
     .grade-point-axis text
       font-size: $predictor-font-size-6
     #svg-keys
@@ -109,8 +110,6 @@
       transform: translate(10px,120px)
     #svg-predicted-grade
       transform: translate(10px, 160px)
-  #predictor-post-graph-spacer
-    height: 175px
 
 // mixin for all rubric level form fields
 @mixin rubric-level-input
